--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "file-transfer-app",
+  "name": "file-sharing-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start":"node server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "socket.io": "^4.5.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.1.2"
   }
 }
